--- a/homepage.html
+++ b/homepage.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link href="css/style2.css" rel="stylesheet" type="text/css">
     <title>Hakuna Matata</title>
   </head>
 
@@ -17,7 +18,7 @@
       At The Hakuna Matata Resort we have mastered the art of relaxation. With luxurious accommodations, rejuvenating spa treatments, sumptuous cuisine, and breathtaking holiday displays, and world-class golf which includes the world's only floating green, this four-star resort continues to be the destination of choice for discerning travelers worldwide.
     </p>
     <p>
-      You can contacts us <a hr href="contact.html">here</a> 
+      You can contacts us <a hr href="contact.html">here</a>
     </p>
   </body>
 </html>
